fix: toolbar title alignmet

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,11 @@
+.toolbar__center {
+    text-align: center !important;
+}
+.toolbar__left,
+.toolbar__right {
+    width: 27% !important;
+}
+
 .route_thumbnail {
     width: 38px;
     height: 38px;
